[project]
name = "hx-pimg"
description = "Some custom nodes used for pimg (a comfyui controller deployed in huixingyun)."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/huixingyun/ComfyUI-HX-Pimg"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-HX-Pimg"
Icon = ""
